8203301: Linux-sparc fails to build after JDK-8199712 (Flight Recorder)

Reviewed-by: kvn, thartmann